fixed footer spacing

--- a/frontend/src/components/InstrumentDetail/InstrumentDetail.css
+++ b/frontend/src/components/InstrumentDetail/InstrumentDetail.css
@@ -249,12 +249,12 @@ div.calendar-container {
 .reviews-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin: 0 5%;
+  margin: 0 5% 1em 5%;
 }
 
 .reviews-header-container.idp-subtitle {
   font-size: 24px;
-  margin: 3% 2%;
+  margin: .5em 2%;
   grid-column-start: 1;
   grid-column-end: 3;
 }
