--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -208,12 +208,12 @@ footer {
 }
 
 .about-me-container {
-  margin-left: 5%;
+  margin-left: 7%;
 }
 
 .external-links {
   font-size: 30px;
-  margin: 2% 5%;
+  margin: 2% 7%;
   display: flex;
 
 }
